--- a/src/components/pages/home/Style/AboutUs.css
+++ b/src/components/pages/home/Style/AboutUs.css
@@ -6,338 +6,143 @@ html{
   scroll-behavior: smooth;
 }
 
-.about-img .row{
-display: flex;
-align-items: center;
-flex-wrap: wrap;
-}
-
-.about-img .row .content{
-flex: 1 1 43rem;
-padding: 2rem;
-
-}
-.about-img .row .content h6{
-font-family: 'montserrat';
-font-weight: bold;
-font-size: 28px;
-color: #FAD400;
-padding-bottom: 12px;
-}
-
-
-.about-img .row .content h4{
-font-family: 'montserrat';
-font-weight: bold;
-color: #082342;
-padding-bottom: 12px;
-}
-.about-img .row .content p{
-font-family: 'Franklin Gothic Light';
-font-size: 16px;
-color: #082342;
-padding: 1rem 0;
-line-height: 1.8;
-}
-
-.about-img .row .image{
-height: auto;
-width: 35rem;
-/* background-color: blue; */
-}
-
-.about-img .row .image-section img{
-  height: auto;
-  width: 18rem;
-  border-radius: 20px;
-}
-
-.about-img {
-padding-top: 100px;
+#about {
+  width: 100%;
+  height: 600px;
   display: flex;
-  justify-content: center;
-  align-self: center;
-  align-items: center;
-  align-content: center;
   background-color: #ffffff;
-  /* height: 100%; */
-  padding:2rem 7%;
+  justify-content: center;
 }
 
-
-/* .container {
-  margin-left: 25rem;
-  margin-right: 25rem;
-  
-} */
-
-.about-img .image-section {
-/* border: solid red; */
-width: 636px;
-height: auto;
-}
-
-.about-img .image-section .image-content {
-background-color: #FF5C17;
-font-family: 'Franklin Gothic Light';
-color: #ffffff;
-width: 280px;
-position: relative;
-left: 0;
-padding: 20px 0px;
-border-radius: 20px;
-left: 180px;
-top: -150px;
-}
-
-.about-img .image-section .image-content .logo-icon {
-width: 70px;
-height: 70px;
-background-color: #ffffff;
-border-radius: 50%;
-text-align: center;
-line-height: 70px;
-position: absolute;
-top: -25px;
-left: 240px;
-box-shadow: 0px 3px 10px #7b7b7b6e;
-}
-
-.about-img .image-section .image-content .logo-icon img {
-width: 45px;
-}
-img, svg {
-vertical-align: middle;
-}
-*, ::after, ::before {
-box-sizing: border-box;
-}
-
-user agent stylesheet
-img {
-overflow-clip-margin: content-box;
-overflow: clip;
-}
-
-.about-img .image-section .image-content .content-box {
-display: flex;
-justify-content: space-evenly;
-}
-
-ul {
-padding: 0px;
-list-style-type: none;
-}
-ul {
-list-style: none;
-margin: 0;
-padding: 0;
-}
-/* dl, ol, ul {
-margin-top: 0;
-margin-bottom: 1rem;
-}
-ol, ul {
-padding-left: 2rem;
-} */
-
-.about-img .image-section .image-content h5 {
-color: #ffffff;
-padding-left: 32px;
-padding-bottom: 15px;
-
-}
-
-/* .plr-50 {
-padding: 0;
-}
-
-.plr-50 {
-padding: 0px 50px;
-} */
-.row {
---bs-gutter-x: 1.5rem;
---bs-gutter-y: 0;
-display: flex;
-flex-wrap: wrap;
-margin-top: calc(var(--bs-gutter-y) * -1);
-margin-right: calc(var(--bs-gutter-x)/ -2);
-margin-left: calc(var(--bs-gutter-x)/ -2);
-}
-
-@media screen and (max-width: 1512px) {
-    
-    .about-img .row .content{
-    flex: 1 1 40rem;
-    padding: 2rem;
-    
-    }
-
-}
-
-@media screen and (max-width: 1456px) {
-    
-  .about-img .row .content{
-  flex: 1 1 35rem;
-  padding: 2rem;
-  
-  }
-
-}
-
-@media screen and (max-width: 1363px) {
-    
-  .about-img .row .content{
-  flex: 1 1 30rem;
-  padding: 2rem;
-  
-  }
-
-}
-
-
-@media (max-width: 580px) {
-.about-img .image-section .image-content {
-  left: 30px;
-  top: 0;
-}
-}
-.content h4 {
-line-height: 40px;
-font-size: 30px;
-}
-
-.py-3 {
-padding-top: 1rem!important;
-padding-bottom: 1rem!important;  
-color: #808080; 
-margin: 0;
-}
-
-@media screen and (max-width: 768px) {
-
-.about-img .row{
-  height: 100%;
-}
-.about-img .row .content{
-  flex: 1 1 43rem;
-  padding: 2rem;
-}
-.about-img .row .content h6{
-  font-size: 25px;
-  color: #FAD400;
-  padding-bottom: 12px;
-}
-.about-img .row .content p{
-  text-align: justify;
-  font-size: 16px;
-  color: black;
-  padding: 1rem 0;
-  line-height: 1.8;
-}
-
-.about-img .row .image{
-  height: auto;
-  width: 35rem;
-  /* background-color: blue; */
-}
-
-.about-img .row .image-section img{
-    height: auto;
-    width: 17rem;
-    border-radius: 20px;
-}
-
-.about-img {
-    /* width: 37%; */
-		width: 100dvw;
-    height: auto;
+#about .about-main-box-container {
+    width: 1340px;
     display: flex;
-    justify-content: center;
-    align-self: center;
-    align-items: center;
-    align-content: center;
-    background-color: #ffffff;
-    padding: 50px 40px 50px 40px;
 }
 
-
- .about-img .image-section {
-  width: 400px;
-  height: auto;
-  padding: 20px;
- }
-
-.about-img .image-section .image-content {
-  background-color: #FF5C17;
-  color: #ffffff;
-  height: 17rem;
-  width: 17rem;
+#about .about-office-hour-container {
+  width: 50%;
   position: relative;
-  left: 0;
-  padding: 25px 0px;
-  border-radius: 20px;
-  left: 50px;
-  top: 0px;
 }
 
-.about-img .image-section .image-content .logo-icon {
-  width: 70px;
-  height: 70px;
-  background-color: #ffffff;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 70px;
-  position: absolute;
-  top: -40px;
-  left: 15rem;
-  box-shadow: 0px 3px 10px #7b7b7b6e;
+#about .about-office-hour-container img {
+  width: 320px;
+  
+}
+
+#about .about-office-hour-schedule-container {
+  width: 307px;
+  height: 290px;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 48px;
+  right: 128px;
+  border-radius: 30px;
+  background-color: var(--ascend);
+  transition: 0.3s;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.about-img .image-section .image-content .logo-icon img {
-  align-self: center;
-  width: 50px;
+#about .about-office-hour-schedule-container:hover {
+  transform: translate(0, -10px);
 }
 
-
-.about-img .image-section .image-content .content-box {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.content-box ul {
-  padding: 0px;
-  list-style-type: none;
-}
-.content-box  ul {
-  font-size: 15px;
-  list-style: none;
+#about .about-office-hour-schedule-container h5 {
+  font-size: 24px;
+  letter-spacing: 1px;
+  color: white;
   margin: 0;
   padding: 0;
 }
 
-.about-img .image-section .image-content h5 {
-  color: #ffffff;
-  font-size: 20px;
-  padding-left: 50px;
-  padding-bottom: 25px;
+#about .about-office-hour-content-box {
+  display: flex;
+  margin-top: 15px;
+  gap: 20px;
+}
 
+#about .about-office-hour-content-box ul, li{
+  color: white;
+  padding: 0;
+  margin: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 30px;
+  list-style: none;
+}
+
+#about .twofourseven-container {
+  width: 75px;
+  height: 75px;
+  top: -30px;
+  right: -30px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border-radius: 100%;
+  transition: 0.3s;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#about .twofourseven-container img{
+  width: 55px;
 }
 
 
-.content h4 {
-  font-size: 20px;
-  font-weight: bold;
+#about .about-content-container {
+  width: 50%;
+  gap: 20px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.py-3 {
-  padding-top: 0.5rem!important;
-  padding-bottom: 0.5rem!important;  
-  color: #808080; 
- 
-
+#about .about-content-container h2{
+  font-size: 48px;
+  color: var(--ascend);
+  padding: 0;
+  margin: 0;
 }
 
+#about .about-content-container h3{
+  font-size: 42px;
+  padding: 0;
+  margin: 0;
 }
+
+#about .about-content-container .bar {
+  height: 4px;
+  width: 85px;
+  background: var(--barc);
+  margin: 0;
+  padding: 0;
+  position: relative;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+#about .about-content-container .bar::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 5px;
+  background: #ffffff;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-name: MOVE-BG;
+          animation-name: MOVE-BG;
+}
+
+/* #about .about-content-container p{
+  
+} */
