--- a/src/components/layout/Style/MainLayout.css
+++ b/src/components/layout/Style/MainLayout.css
@@ -45,8 +45,11 @@ html  {
   justify-content: center;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  background-color: var(--bg-primary);
   border-bottom: solid 1px #d4d4d4;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+  position: absolute;
+  z-index: 2;
 }
 
 .is-sticky {
