--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -1,19 +1,32 @@
-
-/* section{
-    padding:2rem 7%;
-} */
-
-
-.main_footer_container {
-	background: url(../../../assets/img/footer.jpg);
-    padding:2rem 7%;
+#footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.footer-content-container{
-    /* border: solid blue; */
+#footer .container{
+    width: 1340px;
 }
 
-.footer-content {
+.footer-color-1 {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--c1);
+}
+.footer-color-2 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: var(--c2);
+}
+
+#footer .container .footer-content {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -25,87 +38,76 @@
 
 .footer-content h1 {
     font-size: 24px;
-    padding-bottom: 25px;
-    color: #fff;
+    padding-bottom: 20px;
+    color: var(--darkcolor);
+    margin: 0;
 }
 
-/* .happy-paws-content {
-    border: solid green;
-} */
 
 .quick-links-content {
     display: flex;
     flex-direction: column;
-    color: #fff;
-    /* border: solid orange; */
+    row-gap: 15px;
+    color: var(--darkcolor);
 }
 
 .quick-links-content a {
     display: flex;
-    padding-top: 5px;
+    font-size: 16px;
+    font-weight: bold;
     text-decoration: none;
-    flex-direction: column;
-    color: #fff;
-    /* border: solid orange; */
+    color: var(--darkcolor);
 }
 
 .contactus-content {
     display: flex;
     flex-direction: column;
-    /* border: solid violet; */
 }
 
 .contacus-details h6 {
     display: flex;
-    color: white;
+    color: var(--darkcolor);
     align-self: center;
     font-size: 16px;
     padding: 10px;
+    margin: 0;
 }
 
 .contacus-details .fa-solid{
     padding: 0;
     display: flex;
-    color: white;
+    color: var(--darkcolor);
     align-self: center;
     font-size: 20px;
 }
 
-
 .contacus-details {
     display: flex;
-    color: white;
+    color: var(--darkcolor);
 }
-
-
-/* .followus-content {
-    border: solid brown;
-} */
 
 .followus-icon {
     padding-top: 10px;
     display: flex;
     justify-content: space-between;
-
 }
 
 .followus-icon .fa-brands {
-    color: white;
+    color: var(--darkcolor);
     font-size: 25px;
     padding: 0;
 }
 
-.copyrigt-content {
-    margin-top: 50px;
+
+.copyright-content {
+    width: 100%;
     display: flex;
     justify-content: center;
-    border-top: 2px solid #516c75;
 }
 
-.copyrigt-content h6 {
-    padding-top: 30px;
-    font-size: 15px;
-    color: white;
+.copyright-content h6 {
+    font-size: 16px;
+    color: var(--darkcolor);
 }
 
 @media screen and (max-width: 768px) {
