--- a/src/components/pages/appointment/Styles/AppointmentPage.css
+++ b/src/components/pages/appointment/Styles/AppointmentPage.css
@@ -1,12 +1,12 @@
 #appointment {
   width: 100%;
-  height: 100vh;
   background-color: var(--bg-secondary);
   display: flex;
   justify-content: center;
 }
 
 .main-appointment-container {
+  margin-top: 80px;
     width: 1340px;
     text-align: center;
     padding: 25px;
@@ -155,8 +155,6 @@
 
   }
 
-
-
   .appointment-type-card {
     width: 250px;
     padding: 20px;
@@ -190,13 +188,49 @@
     margin-top: 10px;
   }
 
-
-
-  .backBtn:hover {
-    background-color: #666;
-    color: white;
+  .appointment-header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+    background-color: var(--c1);
+    margin-bottom: 25px;
+    padding: 10px 25px 10px 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
+  #appointment .appointment-header .img-container {
+    background-color: white;
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #appointment .appointment-header .img-container  img {
+    width: 65px;
+    height: 65px;
+    margin: 0 auto;
+  }
+
+  .backBtn {
+    color: var(--lightcolor);
+    font-size: 18px;
+    font-family: "Josefin Sans", sans-serif;
+    text-align: center;
+    text-decoration: none;
+    padding: 15px 32px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--btnPrimary);
+  }
+
+  .backBtn:hover {
+    background-color: var(--btnSecondary);
+  }
 
 
 @media screen and (max-width: 768px) {
