--- a/src/components/pages/home/Style/Contact.css
+++ b/src/components/pages/home/Style/Contact.css
@@ -3,12 +3,11 @@
     height: 1150px;
     display: flex;
     justify-content: center;
-    border: solid red 1px;
+    background-color: var(--bg-primary);
 }
 
 #contact .container {
     width: 1340px;
-    border: solid blue 1px;
 }
 
 #contact .container h2{
@@ -48,7 +47,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: solid yellow 1px;
 }
 
 #contact .contact-info-card {
@@ -140,6 +138,7 @@
   }
 
 #contact .contact-form-map-container {
+  margin-top: 25px;
     display: flex;
     width: 100%;
     gap: 20px;
@@ -147,14 +146,15 @@
 
 #contact .contact-form-container {
     width: 50%;
-    border-radius: 20px;
+    border-radius: 8px;
     padding: 1rem;
-    border: solid 1px #151518;
+    background-color: var(--bg-primary);
+    border: solid 3px transparent;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #contact .contact-form-container:hover {
-    border: solid 1px #8176FF;
+    border: solid 3px var(--DB);
   }
 
 #contact .contact-form-container h2{ 
@@ -164,7 +164,7 @@
 }
 
 #contact .contact-form-container .form-control{ 
-    margin-top: 2rem;
+    /* margin-top: 1rem; */
   }
   
 #contact .contact-form-container .contact-from-grid-container {
@@ -193,8 +193,6 @@
 
 #contact input {
     margin-top: 2rem;
-    border: 2px solid var(--lightcolor);
-    background-color: var(--bg-secondary);
     color: var(--darkcolor);
     font-size: 16px;
     font-weight: 500;
@@ -210,20 +208,13 @@
     width: 100%;
     padding: 12px 0px;
     margin: 8px 0;
-    background-color: var(--bg-secondary);
     box-sizing: border-box;
     border: none;
-    border-bottom: 2px solid var(--violet);
+    border-bottom: 3px solid var(--DB);
   }
 
   #contact input[type=text]:focus {
-    width: 100%;
-    padding: 12px 0px;
-    margin: 8px 0;
-    background-color: var(--bg-secondary);
-    box-sizing: border-box;
-    border: none;
-    border-bottom: 2px solid var(--violet);
+    border-bottom: 3px solid var(--DB);
   }
 
   #contact  textarea {
@@ -231,61 +222,75 @@
     height: 150px;
     padding: 12px 0px;
     margin: 8px 0;
-    color: var(--white);
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 500;
     box-sizing: border-box;
     border: none;
     background-color: var(--black);
-    border-bottom: 2px solid var(--violet);
+    border-bottom: 3px solid var(--DB);
     font-size: 16px;
     outline: none;
     resize: vertical;
   }
 
   #contact textarea:focus {
-    width: 100%;
-    height: 150px;
-    padding: 12px 0px;
-    margin: 8px 0;
-    color: var(--white);
-    font-size: 1.1rem;
-    font-weight: 500;
-    box-sizing: border-box;
-    border: none;
-    background-color: var(--black);
-    border-bottom: 2px solid var(--violet);
-    font-size: 16px;
-    outline: none;
-    resize: vertical;
+    border-bottom: 3px solid var(--DB);
   }
 
   #contact  button {
     margin-top: 5rem;
-    color: var(--white);
     padding: 20px 30px 20px 30px;
-    font-family: "Work Sans", Sans-serif;
     font-size: 14px;
     font-weight: 400;
+    color: var(--lightcolor);
+    font-family: "Josefin Sans", sans-serif !important;
     text-transform: uppercase;
     letter-spacing: 3px;
-    background-color: transparent;
-    background-image: linear-gradient(60deg, #6B5EFF, #8176FF 82%);
     border-style: none;
     border-radius: 50px 50px 50px 50px;
+    background-color: var(--btnPrimary);
   }
   
   #contact button:hover {
-    margin-top: 5rem;
-    color: white;
-    padding: 20px 30px 20px 30px;
-    font-family: "Work Sans", Sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    background-color: transparent;
-    background-image: linear-gradient(60deg, #0058E6, #0058E6 100%);
-    border-style: none;
-    border-radius: 50px 50px 50px 50px;
+    background-color: var(--btnSecondary);
+  }
+
+  #contact .contact-map-container {
+    width: 50%;
+  }
+
+  #contact .contact-map-container h2 {
+    text-align: left;
+    font-size: 48px;
+    padding: 0;
+    margin: 0;
+  }
+
+  #contact .contact-map-container .bar {
+    height: 4px;
+    width: 85px;
+    background: var(--barc);
+    margin: 0;
+    padding: 0;
+    position: relative;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  #contact .contact-map-container .bar::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 5px;
+    background: #ffffff;
+    -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+    -webkit-animation-name: MOVE-BG;
+            animation-name: MOVE-BG;
   }
