--- a/src/components/pages/home/Style/Service.css
+++ b/src/components/pages/home/Style/Service.css
@@ -1,9 +1,10 @@
 #service {
     width: 100%;
+    height: 710px;
     display: flex;
     justify-content: center;
     text-align: center;
-    background-color: var(--bg-primary); 
+    background-color: var(--bg-secondary); 
 }
 
 #service .container {
